--- a/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore.WebUI/Views/Product/List.cshtml
@@ -2,17 +2,15 @@
 
 @{
     ViewBag.Title = "Products";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @foreach (var p in Model.Products)
 {
-    <div class="item">
-        <h3>@p.Name</h3>
-        @p.Description
-        <h4>@p.Price.ToString("c")</h4>
-    </div>
+    Html.RenderPartial("ProductSummary", p);
 }
 
-<div>
-    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))
+<div class="pager">
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List",
+        new { page = x, category = Model.CurrentCategory }))
 </div>
