--- a/SportsStore.WebUI/Content/Site.css
+++ b/SportsStore.WebUI/Content/Site.css
@@ -786,3 +786,11 @@ div.pager a {
 div.pager a:hover { background-color: silver; }
 div.pager a.selected { background-color: #353535; color: white; }
 
+div#categories a{
+    font: bold 1.1em "Arial Narrow", "Franklin Gothic Medium", Arial; display: block;
+    text-decoration: none; padding: .6em; color: black;
+    border-bottom: 1px solid silver;
+}
+div#categories a.selected { background-color: #666; color: white; }
+div#categories a:hover { background-color: #CCC; }
+div#categories a.selected:hover { background-color: #666; }
