--- a/SportsStore.WebUI/Content/Site.css
+++ b/SportsStore.WebUI/Content/Site.css
@@ -794,3 +794,21 @@ div#categories a{
 div#categories a.selected { background-color: #666; color: white; }
 div#categories a:hover { background-color: #CCC; }
 div#categories a.selected:hover { background-color: #666; }
+
+form { margin:0; padding:0 }
+div.item form {float:right}
+div.item input { 
+    color:white; background-color:#333; border:1px solid black; cursor:pointer; 
+}
+
+h2 {margin-top:0.3em}
+tfoot td {border-top:1px dotted grey; font-weight:bold;}
+.actionButtons a, input.actionButtons {
+    font: .8em Arial;
+    color: white;
+    margin: .5em;
+    text-decoration: none;
+    padding: .15em 1.5em .2em 1.5em;
+    background-color: #353535;
+    border: 1px solid black;
+}
