--- a/SportsStore.WebUI/Views/Cart/Index.cshtml
+++ b/SportsStore.WebUI/Views/Cart/Index.cshtml
@@ -21,6 +21,14 @@
                 <td align="right">@line.Product.Price</td>
                 <td align="right">@((line.Quantity * 
                     @line.Product.Price).ToString("c"))</td>
+                <td>
+                    @using (Html.BeginForm("RemoveFromCart", "Cart"))
+                    {
+                        @Html.Hidden("ProductId", line.Product.ProductID)
+                        @Html.HiddenFor(x => x.ReturnUrl)
+                        <input class="actionButtons" type="submit" value="Remove" />
+                    }
+                </td>
             </tr>
         }
     </tbody>
@@ -33,4 +41,5 @@
 </table>
 <p align="center" class="actionButtons">
     <a href="@Model.ReturnUrl">Continue Shopping</a>
+    @Html.ActionLink("Checkout now", "Checkout")
 </p>
