--- a/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -4,7 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/Admin.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/jquery-"
+    <script src="~/Scripts/jquery-2.1.4.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <title></title>
 </head>
 <body>
